# LineFollower_Sim2Real

./: straight_line_w_jetbot.usd
ActionGraphs/: CameraHelperGraph.usd  JointStateGraph.usd
Control/: diff_drive_controller_linefollower.yaml  ros2_control_linefollower.yaml
install/: local_setup.sh  setup.sh
install/LinePreProcessor/share/LinePreProcessor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/linepreprocessor/lib/linepreprocessor/: line_center_finder
install/linepreprocessor/share/linepreprocessor/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/linepreprocessor/: package.xml  setup.cfg  setup.py
src/linepreprocessor/install/: local_setup.sh  setup.sh
src/linepreprocessor/install/linepreprocessor/share/linepreprocessor/: package.bash  package.dsv  package.sh  package.xml
src/linepreprocessor/linepreprocessor/: line_center_finder.py  test_segmentation.ipynb
src/linepreprocessor/linepreprocessor/.ipynb_checkpoints/: test_segmentation-checkpoint.ipynb
src/linepreprocessor/log/: latest_build
stages/: stage.stl  straight_line.blend  straight_line_stage (copy).urdf  straight_line_stage.urdf  straight_stage.dae  straight_stage.kra
stages/straight_line_stage/: straight_line_stage.usd
stages/straight_line_stage/configuration/: straight_line_stage_base.usd  straight_line_stage_physics.usd  straight_line_stage_sensor.usd
