<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>linepreprocessor</name>
  <version>0.0.0</version>
  <description>Package for extracting the information from an image containing a line for a line following robot.</description>
  <maintainer email="ohernpaul@gmail.com">bah</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>  
  <exec_depend>python3-numpy</exec_depend>  
  <exec_depend>cv_bridge</exec_depend>      
  <exec_depend>python3-opencv</exec_depend>       
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
